10409: display chevron on previous and next buttons; fix jumping columns on page change; fix jumping previous and next buttons;

--- a/web-client/src/styles/custom.scss
+++ b/web-client/src/styles/custom.scss
@@ -2408,3 +2408,19 @@ button.change-scanner-button {
 .stepper-line-height {
   line-height: 18px;
 }
+
+.visibility-hidden {
+  visibility: hidden;
+}
+
+.column-width-sm {
+  width: 150px
+}
+
+.column-width-md {
+  width: 200px
+}
+
+.column-width-lg {
+  width: 300px
+}
